--- a/react-website/package.json
+++ b/react-website/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"driver-license-validator": "^3.1.1",
 		"react": "^18.2.0",
 		"react-awesome-button": "^7.0.5",
 		"react-datepicker": "^6.6.0",
